Prevent layout shift when changing months

--- a/src/components/ReadingProgressPage/ReadingHistory/AddReading/AddReading.module.scss
+++ b/src/components/ReadingProgressPage/ReadingHistory/AddReading/AddReading.module.scss
@@ -15,3 +15,16 @@
 .selectedDateHeaderContainer {
   display: flex;
 }
+
+.modalHeader {
+  .backButton {
+    position: absolute;
+    pointer-events: initial;
+    inset-inline-start: 0;
+  }
+}
+
+.monthName {
+  width: calc(3 * var(--spacing-mega));
+  text-align: center;
+}
