--- a/src/components/ReadingProgressPage/ReadingHistory/ReadingHistory.module.scss
+++ b/src/components/ReadingProgressPage/ReadingHistory/ReadingHistory.module.scss
@@ -34,12 +34,6 @@
     max-width: 75%;
     margin-inline: auto;
   }
-
-  .backButton {
-    position: absolute;
-    pointer-events: initial;
-    inset-inline-start: 0;
-  }
 }
 
 .modalContentContainer {
